src/objects/Vehicle__c.object
<CustomObject>
    <fields>
        <fullName>Brands__c</fullName>
        <description>Keep previous value on cancel demo</description>
        <inlineHelpText>Keep previous value on cancel demo</inlineHelpText>
        <label>Brands</label>
        <picklist>
            <picklistValues>
                <fullName>Maruti Suzuki</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tata</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Select_Cars__c</fullName>
        <label>Select Cars</label>
        <picklist>
            <picklistValues>
                <fullName>Celerio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ford Figo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>i20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>i10</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Show_Cars__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Cars</label>
        <type>Checkbox</type>
    </fields>
    <label>Vehicle</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Vehicle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehicles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>